--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -67,7 +67,7 @@
                     <th th:text="'Вартість: '+${totalPrise}+'грн'"></th>
                     </tbody>
                     <tbody>
-                    <td><a th:href="'/order'">Оформити замовлення</a></td>
+                    <td><a th:href="'/order'">Оформити замовлення (відправка на пошту)</a></td>
                     </tbody>
                 </table>
 
